--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Interactive Dashboard</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 20px;
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+      text-align: center;
+    }
+    h1 {
+      font-size: 24px;
+      margin-bottom: 20px;
+    }
+    iframe {
+      border: none;
+      width: 573px; /* Updated to your new width */
+      height: 900px; /* Updated to your new height */
+      max-width: 100%;
+    }
+  </style>
+</head>
+<body>
+  <h1>My Interactive Dashboard</h1>
+  <iframe 
+    width="573" 
+    height="900" 
+    frameborder="0" 
+    scrolling="no" 
+    src="https://1drv.ms/x/c/9d731e32e575f703/IQRETNBb8nE3QJomJcM9DZ_tAWn2I8vq794eYvvoSTx8hyY?em=2&Item=Table1&wdHideGridlines=True&wdInConfigurator=True&wdInConfigurator=True">
+  </iframe>
+
+  <script>
+    console.log("Dashboard loaded successfully");
+  </script>
+</body>
+</html>
