--- a/index.html
+++ b/index.html
@@ -27,13 +27,7 @@
 </head>
 <body>
   <h1>My Interactive Dashboard</h1>
-  <iframe 
-    width="573" 
-    height="900" 
-    frameborder="0" 
-    scrolling="no" 
-    src="https://1drv.ms/x/c/9d731e32e575f703/IQRETNBb8nE3QJomJcM9DZ_tAWn2I8vq794eYvvoSTx8hyY?em=2&Item=Table1&wdHideGridlines=True&wdInConfigurator=True&wdInConfigurator=True">
-  </iframe>
+ <iframe class="airtable-embed" src="https://airtable.com/embed/appnaVgVJTSSZ1IxV/shrEhEh7QSG7VKBVr" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
 
   <script>
     console.log("Dashboard loaded successfully");
