--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   <h1>My Interactive Dashboard</h1>
-<iframe width="485" height="800" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/9d731e32e575f703/IQRMwGYuCYrHSK-WlBPodcTWAWB0PZg1iP3PdzT5Sfi0T1Y?em=2&Item=Chart%201&wdInConfigurator=True&wdInConfigurator=True"></iframe>
+<iframe width="485" height="800" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/9d731e32e575f703/IQRMwGYuCYrHSK-WlBPodcTWAWB0PZg1iP3PdzT5Sfi0T1Y?em=2wdHideGridlines=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 
   <script>
     console.log("Dashboard loaded successfully");
